made the layout responsive (added media queries)

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script src="js/index.js"></script>
     <header>
         <nav>
-            <div class="logo">Tickk</div>
+            <div class="logo"><span>Tickk</span></div>
             <ul>
                 <li><a href="/">Home</a></li>
                 <li><a href="/">About</a></li>
@@ -45,7 +45,7 @@
                 <br><br>
             
                 <!-- Submit button -->
-                <input type="submit" value="Submit">
+                <input class="btn" type="submit" value="Submit">
               </form>
         </div>
     </main>
