--- a/index.html
+++ b/index.html
@@ -48,6 +48,13 @@
                 <input class="btn" type="submit" value="Submit">
               </form>
         </div>
+
+        <div class="container">
+            <h2>Your Results</h2>
+            <div id="resultCont">
+
+            </div>
+        </div>
     </main>
 
     <footer>
